generic exp in userprocedure batch